--- a/core/templates/core/post_list.html
+++ b/core/templates/core/post_list.html
@@ -11,7 +11,7 @@
                         <h4 class="subheading">{{ post.title }}</h4>
                     </div>
                     <div class="timeline-body">
-                        <p class="text-muted">{{ post.text|linebreaksbr|safe }}</p>
+                        <p class="text-muted">{{ post.text|safe }}</p>
                     </div>
                 </div>
             </li>
