--- a/core/templates/core/post_list.html
+++ b/core/templates/core/post_list.html
@@ -7,8 +7,8 @@
                 </div>
                 <div class="timeline-panel">
                     <div class="timeline-heading">
-                        <h4>{{ post.date }}</h4>
-                        <h4 class="subheading">{{ post.title }}</h4>
+                        <h4>{{ post.title }}</h4>
+                        <h5 class="subheading">{{ post.date.year }}</h5>
                     </div>
                     <div class="timeline-body">
                         <p class="text-muted">{{ post.text|safe }}</p>
