--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -10,6 +10,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
+    <meta name="author" content="3Ecologias">
+    <meta name="description" content="Nós da 3ecologias desenvolvemos soluções em gestão, comunicação e tecnologias da informação para a educação, o meio ambiente e a cultura. Nossos colaboradores possuem a transdisciplinaridade como vivência, com rico histórico em processos de inclusão social através da cultura e do meio ambiente. A empresa desenvolver projetos para espaços criativos através de objetos de interação expandida, jogos, aplicativos e plataformas.">
+    <meta name="keywords" content="sites, web, desenvolvimento, tecnologia, interação, meio ambiente, educação">
 
     <title>3Ecologias Inovação e Pesquisa</title>
 
