--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -124,7 +124,7 @@
                         <i class="fa fa-code-fork fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Laboratórios</h4>
-                    <p class="text-muted">Pesquisa e desenvolvimento de espaços criativos para desenvolvimento de objetos de interação expandida, jogos, aplicativos e plataformas.</p>
+                    <p class="text-muted">Desenvolvimento de espaços criativos para pesquisa e construção de objetos de interação expandida, jogos, aplicativos e plataformas.</p>
                 </div>
             </div>
         </div>
