--- a/core/templates/core/form.html
+++ b/core/templates/core/form.html
@@ -35,10 +35,13 @@
                             {% if messages %}
                             <div id="success">
                                 {% for message in messages %}
-                                <p{% if message.tags %} class="{{ message.tags }}" {% endif %}>{{ message }}</p>
+                                <p{% if message.tags %} class="{{ message.tags }} section-heading" {% endif %}>{{ message }}</p>
                                 {% endfor %}
                             </div>
                             {% endif %}
+                            <center>
+                              <div class="g-recaptcha" data-sitekey="6Ld67RwUAAAAAFRfgRhl-gMYF5CJimVJLxlRxZdx"></div>
+                            <center>
                             <button type="submit" class="btn btn-xl">Enviar mensagem</button>
                         </div>
                     </div>
