--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -289,7 +289,7 @@
 
     <!-- SlideClient -->
     <script src="{% static 'js/clientslider.js' %}"></script>
-
+    <script src='https://www.google.com/recaptcha/api.js'></script>
 
 </body>
 
