--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -220,6 +220,12 @@
                     <div class="item">
                       <div class="col-md-2 col-sm-6 col-xs-12"><img src="{% static 'img/logos/ufrj.jpg' %}" class="img-responsive"></div>
                     </div>
+                    <div class="item">
+                      <div class="col-md-2 col-sm-6 col-xs-12"><img src="{% static 'img/logos/Conceicao_Moura.png' %}" class="img-responsive"></div>
+                    </div>
+                    <div class="item">
+                      <div class="col-md-2 col-sm-6 col-xs-12"><img src="{% static 'img/logos/beraca_cinza.png' %}" class="img-responsive"></div>
+                    </div>
                   </div>
                   <a class="left carousel-control" href="#myCarousel" data-slide="prev"><i class="glyphicon glyphicon-chevron-left"></i></a>
                   <a class="right carousel-control" href="#myCarousel" data-slide="next"><i class="glyphicon glyphicon-chevron-right"></i></a>
