alterações index e titulo

--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -85,8 +85,8 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <div class="intro-lead-in">Contribuímos para a inovação em</div>
-                <div class="intro-heading">meio ambiente, educação e cultura</div>
+                <div class="intro-lead-in">Contribuímos para a inovação digital em</div>
+                <div class="intro-heading">Projetos e Negócios Sustentáveis</div>
                 <a href="#services" class="page-scroll btn btn-xl">VAMOS!</a>
             </div>
         </div>
@@ -240,7 +240,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <span class="copyright">3Ecologias Pesquisa e Inovação Ltda - 2016</span>
+                    <span class="copyright">3Ecologias Inovação e Pesquisa</span>
                 </div>
                 <div class="col-md-4">
                     <ul class="list-inline social-buttons">
